OPENJPA-244 committing on behalf of Albert
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@552996 13f79535-47bb-0310-9956-ffa450edef68