@@ -211,6 +211,18 @@
             </activation>
         </profile>
 
+        <profile>
+            <id>enable-security</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <test.env>-Dtest.basedir=${basedir}/..</test.env>
+                <policy.file>${basedir}/../openjpa-persistence-jdbc/src/test/resources/j2.security.test.policy</policy.file>
+                <surefire.jvm.args>-Djava.security.manager -Djava.security.policy=${policy.file} ${test.env}</surefire.jvm.args>
+            </properties>
+        </profile>
+
     </profiles>
 
     <repositories>
@@ -277,6 +289,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.2</version>
                     <configuration>
+                        <argLine>${surefire.jvm.args}</argLine>
                         <useFile>false</useFile>
                         <trimStackTrace>false</trimStackTrace>
                         <useSystemClassLoader>true</useSystemClassLoader>
